--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Игры</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css" id="theme">
+		<link rel="stylesheet" href="dist/theme/moon.css" id="theme">
+		<link rel="stylesheet" href="custom.css">
+
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
@@ -16,8 +18,157 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Слайд 1</section>
-				<section>Slide 2</section>
+				<section data-markdown class="center">
+					
+                 <script type="text/template">
+					Игры
+					======
+				 </script>
+				</section>
+
+			
+				<section data-markdown>
+					<script type="text/template">
+						Игра - занятие, обусловленное совокупностью 
+						определенных правил, приемов и служащее для 
+						заполнения досуга, развлечения
+					</script>
+				</section>
+
+					<section data-markdown class="center">
+					    <script type="text/template">
+						## Компьютерная игра
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+						### Компьютерная игра - 
+1. Взаимодействие по определенному алгоритму (с целью развития, обучение, или тренировки) человека (группы людей) с компьютером или группы людей друг с другом посредством компьютера.
+
+						</script>
+					</section>
+
+					<section data-markdown>
+						<script type="text/template">
+							### Компьютерная игра - 
+							  2. Компьютерная программа, которая организует 
+							игровой процесс и управляет им, а также осуществляет 
+							взаимодействие между соперниками и партнерами по игре 
+							или сама выступает в качестве игрока. В процессе игры 
+							на экране дисплея наглядно отображается игровая ситуация. 
+							
+						</script>
+					</section>
+
+					<section data-markdown>
+						<script type="text/template">
+							### Компьютерная игра -  
+							Анализируя эту ситуациию, играющий реагирует на неё с помощью устройств ввода ( клавиатуры, мыши, джойстика и др.).Ответные ходы или соответствующее изменение игровой 
+							ситуации компьютера воспроизводит на экране, часто 
+							со звуковым сопровождением.
+						</script>
+					</section>
+
+					<section data-markdown class="center">
+					    <script type="text/template">
+							## Игра 1. Скоростная матрица
+						</script>
+					</section>
+
+					<section data-markdown>
+						<script type="text/template">
+							### Игра 1. Скоростная матрица
+							Правила игры: игра состоит из 25 ячеек (5х5), ячейки раскрашены в 7 цветов: красный, зеленый, голубйо, черный, белый,желтый и случайный цвет. 24 ячейки раскрашиваются в 6 разных цветов по 4 ячейки каждый. 1 ячейка уникального цвета. С интервалов 300мс ячейки будут перемешиваться. Нужно среди всех других цветов отыскать ячейку с уникальным цветом и кликнуть на неё, пока ячейки снова не перемешались.
+						</script>
+					</section>
+
+					<section data-markdown>
+						<script type="text/template">
+							### Игра 1. Скоростная матрица
+Начисление очков: за каждую правильную кликнутую ячейку игрок получает 500 баллов + количество оставшихся миллисекунд до перемешивания матрицы. При ошибочном нажатии вычитается 500 баллов + количество оставшихся миллисекунд до смены матрицы.перемешались.
+						</script>
+					</section>
+
+					<section data-markdown>
+						<script type="text/template">
+						### Игра 1. Скоростная матрица
+Длительность раундов:
+1. 15 секунд
+2. 30 секунд
+3. 45 секунд
+						</script>
+					</section>
+
+
+					<section>
+						<h3>Игра 1. Скоростная матрица</h3>
+					</section>
+
+					<section>
+						<h3>Турнирная таблица</h3>
+					</section>
+
+
+					<section data-markdown class="center">
+					    <script type="text/template">
+						## Игра 2. Пинг-понг
+						</script>
+					</section>
+
+					<section data-markdown>
+						<script type="text/template">
+							### Игра 2. Пинг-понг
+							Правила игры: игровое поле разделено на 2 части. Слева и справа находятся двигающиеся вверх и вниз ракетки игроков, которые отбивают шар по линейной траектории. В случае, если шар был отбит он меняет свою траекторию. Если шар улетел за пределы игрового поля,одно очко достается тому, кто отбил этот шар последним.
+						</script>
+					</section>
+
+					<section data-markdown>
+						<script type="text/template">
+							### Игра 2. Пинг-понг
+							Начисление очков: 1 очко, выигравшему раундов
+
+							Длительность: до первой ошибки игрока. Игра до 3 очков.
+
+						</script>
+					</section>
+
+					<section>
+						<h3>Игра 2. Пинг-понг</h3> 
+					</section>
+
+					<section>
+						<h3>Турнирная таблица</h3>
+					</section>
+
+					<section>
+						<h3>Игровой джойстик</h3>
+					</section>
+
+					<section data-markdown class=" center ">
+						<script type="text/template">
+							Спасибо за внимание
+						</script>
+					</section>
+
+					<section>
+						<h3>Веселые картинки</h3>
+						<img src="https://tenis1.ru/upload/iblock/cb4/%D1%81%D0%BE%D0%B2%D0%B5%D1%82%D1%8B%20%D0%BD%D0%BE%D0%B2%D0%B8%D1%87%D0%BA%D0%B0%D0%BC.jpg" alt="игра пинг - понг">
+					</section>
+
+					<section
+					data-background-image="https://img2.joyreactor.cc/pics/post/%D0%98%D0%B3%D1%80%D1%8B-Mario-%D1%81%D1%82%D1%80%D0%B5%D0%BB%D0%B0-%D0%B2-%D0%BA%D0%BE%D0%BB%D0%B5%D0%BD%D0%B5-%D0%BF%D0%BE%D1%82%D1%80%D0%B0%D1%87%D0%B5%D0%BD%D0%BE-685783.jpeg"
+					data-menu-title="Марио"
+					></section>
+
+					<section
+					data-background-image="Без названия.jpg"
+					data-background-size="contain"
+					data-menu-title="Марио"
+					></section>
+
+
+
+
 			</div>
 		</div>
 
@@ -31,6 +182,18 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
+				center: false,
+				slideNumber: true,
+				controls:true,
+				dependencies:[
+					{
+						src: 'plugin/menu/menu.js'
+					}
+				],
+				menu:{
+					numbers: true,
+					markers: true,
+				},
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
